# python-flak-app

./: .env.sample  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: settings.py
templates/: fofinho.html  index.html  kadec.html  thunder.html
